--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gaia Goulandris</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="navbar.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <ul class="navbar-menu">
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">My Projects</a></li>
+        <li><a href="#resume">Resume</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+      </ul>
+    </nav>
+
+    <!-- Main Content -->
     <div class="container">
         <div class="container-column">
         <img src="assets/headshot.png" alt="Gaia Goulandris" class="main-image" />
