--- a/index.html
+++ b/index.html
@@ -19,35 +19,71 @@
         <li><a href="#resume">Resume</a></li>
         <li><a href="#contact">Contact Me</a></li>
       </ul>
-    </nav>
+     </nav> 
+
+    <!-- Mini Navbar -->
+    <div class="mini-navbar">
+      <a href="https://github.com/gaiagoul4n" class="button">
+        <img src="assets/github_black_logo.png" alt="GitHub" />
+      </a>
+      <a href="mailto:gag83@georgetown.edu" class="button">
+        <img src="assets/email-logo.png" alt="Email" />
+      </a>
+      <a href="https://www.linkedin.com/in/gaia-goulandris" class="button">
+        <img src="assets/black_linkedin.png" alt="LinkedIn" />
+      </a>
+    </div>
 
     <!-- Main Content -->
-    <div class="container">
-        <div class="container-column">
-        <img src="assets/headshot.png" alt="Gaia Goulandris" class="main-image" />
-        <div class="buttons">
-            <a href="https://github.com/gaiagoul4n" class="button">
-              <img src="assets/github_black_logo.png" alt="Github" />
-            </a>
-            <a href="mailto:gag83@georgetown.edu" class="button">
-                <img src="assets/email-logo.png" alt="Email" />
-              </a>
-            <a
-              href="https://www.linkedin.com/in/gaia-goulandris"
-              class="button"
-            >
-              <img src="assets/black_linkedin.png" alt="LinkedIn" />
-            </a>
-          </div>
+    <section id="about" class="main-section"></section>
+      <div class="container">
+          <img src="assets/headshot.png" alt="Gaia Goulandris" class="main-image" />
+          <div class="text">
+            <h1>Gaia Goulandris</h1>
+            <h5>
+              I'm a junior at Georgetown University studying Computer Science. 
+              I'm passionate about software development, product management, and solving real-world problems
+              through creating innovative solutions that leave an impact.
+            </h5>
         </div>
-        <div class="text">
-          <h1>Gaia Goulandris</h1>
-          <h5>
-            I'm a junior at Georgetown University studying Computer Science. 
-            I'm doing the Hoya Devs Software Development Bootcamp.
-          </h5>
-          
-        </div>
-    </div>
+      </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="section">
+      <h2>My Projects</h2>
+      <ul>
+        <li>
+          <strong>Project 1:</strong> description.
+        </li>
+        <li>
+          <strong>Project 2:</strong> description.
+        </li>
+        <li>
+          <strong>Project 3:</strong> description.
+        </li>
+      </ul>
+    </section>
+
+    <!-- Resume Section -->
+    <section id="resume" class="section">
+      <h2>Resume</h2>
+      <p>
+        Download my resume <a href="assets/resume.pdf" target="_blank">here</a>.
+      </p>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+      <h2>Contact Me</h2>
+      <p>
+        Feel free to reach out to me via:
+      </p>
+      <ul>
+        <li>Email: <a href="mailto:gag83@georgetown.edu">gag83@georgetown.edu</a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/gaia-goulandris" target="_blank">Gaia Goulandris</a></li>
+        <li>GitHub: <a href="https://github.com/gaiagoul4n" target="_blank">gaiagoul4n</a></li>
+      </ul>
+    </section>
   </body>
 </html>
