--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar">
       <ul class="navbar-menu">
-        <li><a href="#about">About</a></li>
+        <li><a href="#about">About Me</a></li>
         <li><a href="#projects">My Projects</a></li>
         <li><a href="#resume">Resume</a></li>
         <li><a href="#contact">Contact Me</a></li>
