--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Gaia Goulandris</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="navbar.css" />
+    <link rel="stylesheet" href="projects.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -149,15 +150,15 @@
                 <img src="assets/github_black_logo.png" alt="GitHub" />
                 View Code
               </a>
-              <a href="assets/projects/full-documentation.pdf" target="_blank" class="project-link doc">
+              <a href="assets/project_documentation.pdf" target="_blank" class="project-link doc">
                 <img src="assets/pdf-icon.png" alt="PDF" />
                 View Complete Documentation
               </a>
-              <!-- If you have a demo video -->
+              <!-- If you have a demo video 
               <a href="[demo-video-link]" target="_blank" class="project-link demo">
                 <img src="assets/video-icon.png" alt="Demo" />
                 Watch Demo
-              </a>
+              </a> -->
             </div>
     
             <div class="future-development">
@@ -195,33 +196,21 @@
     <section id="resume" class="section">
       <h2>Resume</h2>
       <div class="resume-container">
-        <div class="resume-actions">
-          <a href="assets/Gaia_Goulandris_Resume.pdf" download class="download-button">
-            <img src="assets/download-button.png" alt="Download Button" />
-            Download PDF
-          </a>
-          <a href="assets/Gaia_Goulandris_Resume.pdf" target="_blank" class="view-button">
-            Open in New Tab
-          </a>
-        </div>
         <div class="resume-preview">
-          <!-- PDF Embed -->
           <embed
-            src="assets/Gaia_Goulandris_Resume.pdf"
+            src="assets/resume.pdf"
             type="application/pdf"
-            width="100%"
-            height="600px"
+            class="resume-embed"
           />
-          <!-- Fallback for browsers that don't support PDF embedding -->
-          <object
-            data="assets/Gaia_Goulandris_Resume.pdf"
-            type="application/pdf"
-            width="100%"
-            height="600px"
-          >
-            <p>It appears you don't have a PDF plugin for this browser. 
-            No worries! You can <a href="assets/Gaia_Goulandris_Resume.pdf">click here to download the PDF file.</a></p>
-          </object>
+        </div>
+        <div class="resume-actions">
+          <a href="assets/resume.pdf" download class="resume-button">
+            <img src="assets/download-button.png" alt="Download" class="button-icon"/>
+            <span class="button-text">Download Resume</span>
+          </a>
+          <a href="assets/resume.pdf" target="_blank" class="resume-button">
+            <span class="button-text">Open in New Tab</span>
+          </a>
         </div>
       </div>
     </section>
