--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="navbar.css" />
     <link rel="stylesheet" href="projects.css" />
+    <link rel="stylesheet" href="contact.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -218,14 +219,25 @@
     <!-- Contact Section -->
     <section id="contact" class="section">
       <h2>Contact Me</h2>
-      <p>
-        Feel free to reach out to me via:
-      </p>
-      <ul>
-        <li>Email: <a href="mailto:gag83@georgetown.edu">gag83@georgetown.edu</a></li>
-        <li>LinkedIn: <a href="https://www.linkedin.com/in/gaia-goulandris" target="_blank">Gaia Goulandris</a></li>
-        <li>GitHub: <a href="https://github.com/gaiagoul4n" target="_blank">gaiagoul4n</a></li>
-      </ul>
+      <div class="contact-container">
+        <div class="contact-card">
+          <img src="assets/email-logo.png" alt="Email" class="contact-icon"/>
+          <h3>Email</h3>
+          <a href="mailto:gag83@georgetown.edu" class="contact-link">gag83@georgetown.edu</a>
+        </div>
+    
+        <div class="contact-card">
+          <img src="assets/black_linkedin.png" alt="LinkedIn" class="contact-icon"/>
+          <h3>LinkedIn</h3>
+          <a href="https://www.linkedin.com/in/gaia-goulandris" target="_blank" class="contact-link">Gaia Goulandris</a>
+        </div>
+    
+        <div class="contact-card">
+          <img src="assets/github_black_logo.png" alt="GitHub" class="contact-icon"/>
+          <h3>GitHub</h3>
+          <a href="https://github.com/gaiagoul4n" target="_blank" class="contact-link">gaiagoul4n</a>
+        </div>
+      </div>
     </section>
   </body>
 </html>
