added images for technical documetnation

--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                 <div class="documentation-preview">
                   <div class="documentation-section">
                     <h5>System Architecture</h5>
-                    <img src="assets/projects/system-diagram.png" alt="System Architecture Diagram" />
+                    <img src="assets/system-diagram.png" alt="System Architecture Diagram" />
                   </div>
                   <div class="documentation-section">
                     <h5>Database Schema</h5>
-                    <img src="assets/projects/database-design.png" alt="Database Schema Design" />
+                    <img src="assets/database-design.png" alt="Database Schema Design" />
                   </div>
                 </div>
               </details>
