--- a/index.html
+++ b/index.html
@@ -57,9 +57,12 @@
       <div class="projects-grid">
         <div class="project-card">
           <h3>School Book Trading Platform</h3>
-          <div class="project-images">
-            <img src="assets/projects/bookstore-interface.png" alt="School Bookstore Interface" class="project-image"/>
-          </div>
+          <details>
+            <summary>Homepage Interface</summary>
+            <div class="project-images">
+              <img src="assets/bookstore-interface.png" alt="School Bookstore Interface" class="project-image"/>
+            </div>
+          </details>
           
           <div class="project-content">
             <div class="project-overview">
